# recinit

./: Cargo.toml  LICENSE-MIT  README.md
src/: busybox.rs  cpio.rs  elf.rs  install.rs  lib.rs  main.rs  modules.rs  systemd.rs  tiny.rs
templates/: init_tiny.template
