[package]
name = "recinit"
version = "0.1.0"
edition = "2021"
description = "Rootless initramfs builder for Linux"
repository = "https://github.com/LevitateOS/recinit"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["initramfs", "linux", "boot", "cpio"]
categories = ["command-line-utilities", "filesystem"]

[lib]
name = "recinit"
path = "src/lib.rs"

[[bin]]
name = "recinit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
